# invoice-cleaner

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/invoice_cleaner/: core.py  models.py  utils.py
src/invoice_cleaner/providers/: aws.py  free.py  generic.py  ovh.py
tests/: test_core.py  test_generic.py  test_providers.py  test_utils.py
